--- a/r2/r2/templates/subreddit.html
+++ b/r2/r2/templates/subreddit.html
@@ -24,10 +24,10 @@
    from r2.lib.template_helpers import static
    from r2.lib.strings import strings
    from r2.lib.utils import timesince
+   from r2.lib.pages import SubscribeButton
    %>
 <%inherit  file="printable.html"/>
 
-<%namespace file="printablebuttons.html" import="toggle_button"/>
 <%namespace file="utils.html" import="plain_link"/>
 
 <%def name="numcol()">
@@ -57,16 +57,6 @@
 <%def name="tagline()">
   ${self.score(thing, thing.subscriber)},
   ${_("a community for %(time)s") % dict(time=timesince(thing._date))}
-</%def>
-
-##this function is used by subscriptionbox.html
-<%def name="addremove_button(sr)">
-  ${toggle_button("fancy-toggle-button", _("subscribe"), _("unsubscribe"),
-                  "subscribe('%s')" % sr._fullname, 
-                  "unsubscribe('%s')" % sr._fullname, 
-                  css_class = "add", alt_css_class = "remove",
-                  reverse = sr.subscriber,
-                  login_required = True)}
 </%def>
 
 ##this function is used by subscriptionbox.html
@@ -101,7 +91,7 @@
 
 <%def name="midcol(display=True, cls='')">
   <div class="midcol">
-    ${addremove_button(thing)}
+    ${SubscribeButton(thing)}
     ${permission_icons(thing)}
   </div>
 </%def>
