--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5213,6 +5213,12 @@ table.calendar {
         }
     }
 
+    &.readonly {
+        button.remove-sr {
+            display: none;
+        }
+    }
+
     form.add-sr {
         .sr-name, button.add {
             vertical-align: middle;
