--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5147,6 +5147,10 @@ table.calendar {
             vertical-align: middle;
         }
 
+        button {
+            cursor: pointer;
+        }
+
         label, .show-copy, .delete {
             margin-right: 12px;
         }
