Prevent inner form throbbers when parent element is working.
This keeps the copy and rename form throbbers from showing when an
operation is in progress on their parent form.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5184,6 +5184,11 @@ table.calendar {
 
         .throbber {
             height: 22px;
+            display: none;
+        }
+
+        &.working .throbber {
+            display: inline-block;
         }
     }
 
