--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -90,7 +90,7 @@
       ${_md(
         "reddit gold is our premium membership program. It comes with extra features to make your experience here better as well as special benefits from gold partners for exceptional products and services.\n\n"
         "reddit takes no payment from gold partners for being in this program. We ask that they give all the benefits to you, our users. We hope in turn that this helps make gold a program worth subscribing to.\n\n"
-        "If you have questions about any of the benefits, please visit /r/goldbenefits. New benefits and features will also be announced there, and we hope you'll enjoy them."
+        "If you have questions about any of the benefits, please visit /d/goldbenefits. New benefits and features will also be announced there, and we hope you'll enjoy them."
       )}
       <div class="signature"><img src="${static('gold/letter-signature.png')}" alt="yishan"><a href="/u/yishan" target="_blank">/u/yishan</a></div>
     </div>
@@ -129,8 +129,8 @@
     ${feature_item('filter-all',
       static('gold/sample-filterall.png'),
       _(
-        "# Filter specific subreddits from /r/all.\n"
-        "Are there subreddits you don't want to see? Customize /r/all by removing them with a url like /r/all-operative-badger (up to ~300 removals - limited by maximum url length)."
+        "# Filter specific subreddits from /d/all.\n"
+        "Are there subreddits you don't want to see? Customize /d/all by removing them with a url like /d/all-operative-badger (up to ~300 removals - limited by maximum url length)."
       ))}
     ${feature_item('more-comments',
       static('gold/sample-morecomments.png'),
