--- a/r2/r2/templates/prefapps.html
+++ b/r2/r2/templates/prefapps.html
@@ -193,7 +193,7 @@
     %if i:
       ,&#32;
     %endif
-    <a href="/r/${name}">/r/${name}</a>
+    <a href="/d/${name}">/d/${name}</a>
   %endfor
 </%def>
 
