--- a/r2/r2/templates/prefapps.html
+++ b/r2/r2/templates/prefapps.html
@@ -202,7 +202,7 @@
     <ul>
       %if not compact and scope.subreddit_only:
         <li>
-          ${_("Only in the subreddits:")}&#32;
+          ${_("Only in the dottopics:")}&#32;
           ${sr_list(scope.subreddits)}.
         </li>
       %endif
