--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -70,7 +70,7 @@ function toggle_expando(elem){
           ${bad_example('Submitting only links to your blog or personal website.')}
           ${good_example('Submitting links from a variety of sites and sources.')}
           ${good_example('Submitting links from your own site, talking with redditors in the comments, and also submitting cool stuff from other sites.')}
-          ${bad_example('Posting the same comment repeatedly in multiple subreddits.')}
+          ${bad_example('Posting the same comment repeatedly in multiple dottopics.')}
         ${expando_end()}
       </li>
       <li id="votecheating">
