--- a/r2/r2/templates/feedbackblurb.html
+++ b/r2/r2/templates/feedbackblurb.html
@@ -35,7 +35,7 @@
   <dl>
     <dt>Making a press inquiry?</dt>
     <dd><a href="/wiki/press">Get our press contact details</a>.</dd>
-    <dt>Are your submissions not showing up?  Subreddit marked as spam?  Is the spam filter acting up?</dt>
+    <dt>Are your submissions not showing up?  Dottopic marked as spam?  Is the spam filter acting up?</dt>
     <dd>
       &#32;<a href="/message/compose?to=${g.admin_message_acct|u}">Send a private message to the admins.</a>&#32;(We really do want to help)
     </dd>
@@ -44,11 +44,11 @@
     <dt>Got a bug report?</dt>
     <dd><a href="/d/bugs/">Check /d/bugs for other people with the same problem, or submit your own bug report.</a></dd>
     <dt>Are you a new moderator?  Having trouble staying out of the fray? Need advice?</dt>
-    <dd><a href="/d/modhelp">There's a subreddit for that</a>.</dd>
+    <dd><a href="/d/modhelp">There's a dottopic for that</a>.</dd>
     <dt>Want to advertise but don't know how?</dt>
     <dd><a href="/ad_inq">The instructions are here</a>.</dd>
     <dt>General questions?  Need help?</dt>
-    <dd><a href="/d/help">There's a subreddit for that, too</a>.</dd>
+    <dd><a href="/d/help">There's a dottopic for that, too</a>.</dd>
     <dt>Frustrated? Need a break?</dt>
     <% r = random.randint(0,2) %>
     %if r == 0:
