--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -130,14 +130,14 @@
       static('gold/sample-filterall.png'),
       _(
         "# Filter specific subreddits from /d/all.\n"
-        "Are there subreddits you don't want to see? Customize /d/all by removing them with a url like /d/all-operative-badger (up to ~300 removals - limited by maximum url length)."
+        "Are there dottopics you don't want to see? Customize /d/all by removing them with a url like /d/all-operative-badger (up to ~300 removals - limited by maximum url length)."
       ))}
     ${feature_item('more-comments',
       static('gold/sample-morecomments.png'),
       _(
         '# More subreddits and comments per page.\n'
         'Our servers work harder for gold members.  \n'
-        'Subscribe to up to 100 subreddits on your front page.  \n'
+        'Subscribe to up to 100 dottopics on your front page.  \n'
         'Read comment threads 1500 comments at a time.'
       ))}
     ${feature_item('save-comments',
@@ -145,7 +145,7 @@
     _(
         '# Save comments and view by subreddit.\n'
         "Save the great comments you'd like to revisit later.  \n"
-        'Filter your favorite posts and comments by subreddit.'
+        'Filter your favorite posts and comments by dottopic.'
       ))}
     ${feature_item('ads-optional',
       static('gold/sample-adsoptions.png'),
