--- a/r2/r2/templates/interestbar.html
+++ b/r2/r2/templates/interestbar.html
@@ -24,22 +24,22 @@
   <div class="bubble">
     <%
         if thing.has_subscribed:
-            msg = _("ready for something new? %s subscribe %s to some new subreddits.")
+            msg = _("ready for something new? %s subscribe %s to some new dottopics.")
         else:
-            msg = _("it looks like you haven't %s subscribed %s to any subreddits yet. want some ideas?")
+            msg = _("it looks like you haven't %s subscribed %s to any dottopics yet. want some ideas?")
 
         pre, sub, post = msg.split("%s")
     %>
     <p class="caption">${pre}&#32;<span class="subscribe">${sub}</span>&#32;${post}</p>
     <p class="error-caption"></p>
     <div class="query-box"><input class="query" placeholder="${_('what are you interested in?')}"><div class="throbber"></div></div>
-    <ul class="results">
-      <li>${_('try these:')}</li>
-      <li>
-        <a href="/d/random" class="random" target="_blank">
-          <span class="name">${_("serendipity")}</span>
-        </a>
-      </li>
-    </ul>
+    <!--<ul class="results">-->
+      <!--<li>${_('try these:')}</li>-->
+      <!--<li>-->
+        <!--<a href="/d/random" class="random" target="_blank">-->
+          <!--<span class="name">${_("serendipity")}</span>-->
+        <!--</a>-->
+      <!--</li>-->
+    <!--</ul>-->
   </div>
 </div>
