--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -98,7 +98,7 @@ ${thing.formtabs_menu}
 %endif
 
 <div class="spacer">
-  <%utils:round_field title="${_('choose a subreddit')}" id="reddit-field">
+  <%utils:round_field title="${_('choose a dottopic')}" id="reddit-field">
     ${reddit_selector(thing.default_sr.name if thing.default_sr else None, thing.sr_searches, thing.subreddits, required=True)}
   </%utils:round_field>
 </div>
