--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -74,7 +74,7 @@
       >
      <thead>
         <tr>
-          <th id="sr-karma-header">subreddit</th>
+          <th id="sr-karma-header">dottopic</th>
           <th>link</th>
           <th>comment</th>
         </tr>
@@ -104,7 +104,7 @@
     <div class="karma-breakdown">
       <a href="javascript:void(0)"
          onclick="$('.more-karmas').show();$(this).hide();return false">
-         show karma breakdown by subreddit
+         show karma breakdown by dottopic
       </a>
     </div>
     % endif
