--- a/r2/r2/templates/promotereport.html
+++ b/r2/r2/templates/promotereport.html
@@ -105,7 +105,7 @@ ${unsafe(js.use('sponsored'))}
       <th class="blank"/>
       <th class="blank"/>
       <th colspan="2">frontpage</th>
-      <th colspan="2">subreddit</th>
+      <th colspan="2">dottopic</th>
       <th colspan="2">total</th>
     </tr>
     <tr>
