--- a/r2/r2/templates/sitewidetraffic.html
+++ b/r2/r2/templates/sitewidetraffic.html
@@ -30,10 +30,10 @@
   ${parent.sidetables()}
 
   <table class="traffic-table">
-  <caption>${_("top subreddits")} <span class="normal">(<a href="/traffic/subreddits/report">${_("make report")}</a>)</span></caption>
+  <caption>${_("top dottopics")} <span class="normal">(<a href="/traffic/dottopics/report">${_("make report")}</a>)</span></caption>
   <thead>
   <tr>
-    <th scope="col">${_("subreddit")}</th>
+    <th scope="col">${_("dottopic")}</th>
     <th scope="col">${_("uniques")}</th>
     <th scope="col">${_("pageviews")}</th>
   </tr>
