--- a/r2/r2/templates/subreddittopbar.html
+++ b/r2/r2/templates/subreddittopbar.html
@@ -39,6 +39,6 @@
     </div>
 
     ${plain_link(unsafe(_(editmore) + " &raquo;"),
-                 "/subreddits/", id="sr-more-link")}
+                 "/dottopics/", id="sr-more-link")}
   </div>
 </div>
